--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 dist/
 build/
 .idea/
-untitled.ui
-output.py
-output1.py
+mygitignore/
 tv_viewer/__pycache__
 tv_api_work/__pycache__
 tv_qt_class/__pycache__
+tv_sqllite/__pycache__
